compiling_error.txt
/home/matheus/C++/atom/project_network_social/user_manipulation.cpp: In function ‘void show_user_menu()’:
/home/matheus/C++/atom/project_network_social/user_manipulation.cpp:160:7: error: ‘edit_user_information’ was not declared in this scope
       edit_user_information();
       ^~~~~~~~~~~~~~~~~~~~~
/home/matheus/C++/atom/project_network_social/user_manipulation.cpp:172:7: error: ‘show_spider_web’ was not declared in this scope
       show_spider_web();
       ^~~~~~~~~~~~~~~
/home/matheus/C++/atom/project_network_social/user_manipulation.cpp:172:7: note: suggested alternative: ‘show_user_menu’
       show_spider_web();
       ^~~~~~~~~~~~~~~
       show_user_menu
